--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ requests = "^2.25.1"
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
 pytest = "^6.2.4"
+setuptools = "^57.0.0"
+wheel = "^0.36.2"
+build = "^0.4.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
